4 April 2005 Sylvain Pion
- Rename R in K in the documentation.
- doc : fix Cell::vertex_index() and Cell::cell_index() to index().

30 March 2005 Sylvain Pion
- Switch IPE pictures to IPE 6, and regenerate PDF and EPS versions.

30 March 2005 Sylvain Pion
- Remove internal Triangulation_ds_{vertex|cell} layer.
- Added mirror_vertex(), mirror_index(), is_valid(Cell_handle),
  is_valid(Vertex_handle) at the TDS and Triangulation level.
- Remove calls to {Vertex|Cell}::init() (deprecated since long).

8 March 2005 Sylvain Pion
- Weighted_converter : allow operators on other kernel objects too.

1 March 2005 Mariette Yvinec
- fixed  operator() for two points in In_smallest_orthogonal_sphere

1 March 2005 Mariette Yvinec
- added operator() for two points in In_smallest_orthogonal_sphere

9 February 2005 Sylvain Pion
- Remove documentation of Triangulation_3 and TDS_3's destructors.

31 January 2005 Sylvain Pion
- Document .point() in TDS::Vertex.

14 January 2005 Sylvain Pion
- Added incident_facets(Vertex_handle).

07 January 2005 Sylvain Pion
- Doc : missing \\

================================ CGAL 3.1 =========================

19 December 2004 Sylvain Pion
- Fix example_tds when -DNDEBUG.

1 December 2004 Sylvain Pion
- doc [ref] : add separator for Links to the Reference Sections.

16 November 2004 Sylvain Pion
- Comment out Regular::remove() documentation, as it's not ready.
- Comment out Christophe's acknowledgement, for the same reason.
- Remove Andreas from the main authors list.

9 November 2004 Sylvain Pion
- Disable test_regular_as_delaunay_3 since remove is not ready yet.

7 November 2004 Sylvain Pion
- Regular::insert() : discard point when same xyz coordinates and
  same weight as an existing vertex.

6 November 2004 Sylvain Pion
- Add move_point() to Regular_3 (not documented because not tested yet).
- Add test-suite program test_regular_as_delaunay_3.

27 September 2004 Sylvain Pion
- Rename Triangulation_cell_base_with_hidden_points_3 into