@@ -23,7 +23,7 @@ int main()
 #include <fstream>
 #include <unistd.h>
 
-struct K : CGAL::Exact_predicates_inexact_constructions_kernel {};
+typedef CGAL::Exact_predicates_inexact_constructions_kernel K;
 
 typedef CGAL::Delaunay_triangulation_3<K>  Triangulation;
 
