@@ -5,7 +5,7 @@
 #include <CGAL/Triangulation_vertex_base_with_info_3.h>
 #include <CGAL/IO/Color.h>
 
-struct K : CGAL::Exact_predicates_inexact_constructions_kernel {};
+typedef CGAL::Exact_predicates_inexact_constructions_kernel K;
 
 typedef CGAL::Triangulation_vertex_base_with_info_3<CGAL::Color, K> Vb;
 typedef CGAL::Triangulation_data_structure_3<Vb>                    Tds;
