@@ -7,7 +7,7 @@
 #include <vector>
 #include <cassert>
 
-struct K : CGAL::Exact_predicates_inexact_constructions_kernel {};
+typedef CGAL::Exact_predicates_inexact_constructions_kernel K;
 
 typedef CGAL::Delaunay_triangulation_3<K>        Delaunay;
 typedef Delaunay::Point                          Point;
